force-app/main/default/objects/Book__c/Book__c.object-meta.xml
<CustomObject>
    <customHelpPage>Milestone1_Summary2</customHelpPage>
    <description>This is object is used to store books Information</description>
    <label>Book</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>