force-app/main/default/objects/Book__c/fields/Number_Of_Books__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Books__c</fullName>
    <label>Number Of Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>