force-app/main/default/objects/Book__c/fields/Publisher_Id__c.field-meta.xml
<CustomField>
    <fullName>Publisher_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publisher Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>