force-app/main/default/objects/Book__c/validationRules/BookValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>BookValidation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Book Name is blank</errorMessage>
</ValidationRule>