force-app/main/default/objects/Book__c/validationRules/Due_Date_Not_Before_Date_Of_Issue.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date_Not_Before_Date_Of_Issue</fullName>
    <active>true</active>
    <errorConditionFormula>Due_Date__c &lt; Date_Of_Issue__c</errorConditionFormula>
    <errorMessage>Due Date cannot be before Date of Issue</errorMessage>
</ValidationRule>